Fix overflow of the form section

--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ body {
     flex-direction: column;
     justify-content: center;
     width: 60vw;
+    height: 100vh;
+    overflow: auto;
 }
 
 .form-section .signup-pls {
